--- a/Image slider/index.html
+++ b/Image slider/index.html
@@ -2,26 +2,23 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <link rel="stylesheet" href="index.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Image Slider Example</title>
+    <link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
-    <div class="container">
-        <div class="slider"></div>
-        <div class="bottom-container">
-            <button class="btn-slide prev">Left</button>
-            <div class="dots-container"></div>
-            <button class="btn-slide next">Next</button>
-        </div>
-    </div>
-    <script src="app.js">
+    <h1>Image Slider Example</h1>
+    <div class="slider"></div>
 
-    </script>
+    <div class="bottom-container">
+        <button class="btn-slide prev">Left</button>
+        <div class="dots-container"></div>
+        <button class="btn-slide next">Next</button>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 
 </html>
